--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,10 @@
 
 .App{
   height: 100vh;
-  display: grid;
-  place-items: center;
+  padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   background-color: black;
 }
 
@@ -19,12 +21,12 @@
   background-color: white;
   display: grid;
   grid-auto-flow: row;
-  gap: 150px;
   align-content: space-around;
 }
 
 .form-container h1{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
 }
 
 .form-main form{
@@ -75,4 +77,5 @@
 
 .form-footer p{
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  text-align: center;
 }
